Fix dropdown z-index Add test text to dropdowns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -951,7 +951,7 @@ a {
       top: 0;
       // width: 120%;
       width: calc(100% + 40px);
-      z-index: 1;
+      z-index: 10;
       box-shadow: 0 7px 34px rgba(0, 0, 0, 0.18);
 
       margin-left: -25px;
@@ -1437,7 +1437,6 @@ a {
     }
   }
 }
-
 
 .news-card-wrap {
   margin-bottom: 20px;
